# tauri-plugin-export

./: .gitignore  Cargo.toml  README.md  README_EN.md  build.rs  package.json  tsconfig.json
guest-js/: index.ts
permissions/: default.toml
src/: commands.rs  docx.rs  error.rs  lib.rs  models.rs
