[package]
name = "tauri-plugin-export"
version = "1.0.0"
description = "Document export plugin for Tauri apps (Excel + DOCX)"
authors = ["BiShen <bishen@live.com>"]
license = "MIT"
links = "tauri-plugin-export"
edition = "2021"
rust-version = "1.70"
keywords = ["tauri", "plugin", "excel", "docx", "export"]
categories = ["development-tools"]
readme = "README.md"
repository = "https://github.com/bishen/tauri-plugin-export"
homepage = "https://github.com/bishen/tauri-plugin-export"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", default-features = false }
tauri-plugin = { version = "2", features = ["runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_xlsxwriter = "0.93"
docx-rs = "0.4"
dirs = "5"
thiserror = "1"
log = "0.4.29"

[features]
default = []
